--- a/website/source/index.html.haml
+++ b/website/source/index.html.haml
@@ -173,7 +173,7 @@
           .doc-col
             %h2 Rails Plugins
 
-            %p If you want to extract some functionality of your own application, rails plugins are the way to go. We like autotest and rspec, which was always tricky to configure, so we packaged that up to!
+            %p If you want to extract some functionality of your own application, rails plugins are the way to go. We like autotest and rspec, which was always tricky to configure, so we packaged that up too!
 
             %pre= "$ happy_seed plugin acts_as_awesome"
 
