--- a/website/source/layouts/docs_layout.haml
+++ b/website/source/layouts/docs_layout.haml
@@ -16,8 +16,9 @@
               = link_to "Rails", "/docs/rails.html"
 
             - if current_page.url == "/docs/rails.html" || current_page.url =~ /README/
-              - Dir.glob( "source/docs/README*").each do |f|
+              - Dir.glob( "source/docs/README*").sort.each do |f|
                 - l = f.gsub( /.*source\//, "/" ).gsub( /.html.*/, ".html" )
+                - l = '/docs/README.01.html_email.html' if f =~ /html_email/
                 - n = f.gsub( /.*\d\d./, "" ).gsub( /.html.*/, "" ).capitalize
                 %li{ class: current_page.url == l ? "active" : nil }
                   = link_to " - #{n}", l
