fix cancan to be cancancan and add Rails 5 to the header

--- a/website/source/index.html.haml
+++ b/website/source/index.html.haml
@@ -9,7 +9,7 @@
         #logo-container
           #ted{"data-scroll-reveal"=>"enter from the top but wait .5s"}
           %h2#info
-            Seed.
+            Seed. Now for Rails 5!
             %br
             Build MVPs quickly.
           %h1#seed-logo.logo{"data-scroll-reveal"=>"enter bottom but wait 1s over 1s"}
@@ -131,7 +131,7 @@
 
           .info_on_flow.roles_comment.hide_comment
             %h3 Roles install:
-            %p Installs and sets up can-can so you can manage roles quickly and easily. It is set up to work with active-admin out of the box so that you don't need a separate admin.
+            %p Installs and sets up cancancan so you can manage roles quickly and easily. It is set up to work with active-admin out of the box so that you don't need a separate admin.
             %p
               =link_to "Check out the docs >", "/docs/README.03.roles.html"
 
