--- a/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
+++ b/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
@@ -4,10 +4,11 @@
     %title HappySeed Generator setup page
     = javascript_include_tag 'application'
     = csrf_meta_tags 
-    / %script{:src=>"https://code.jquery.com/jquery-2.1.3.min.js"}
-    / %script{:src=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"}
-    %link{:href=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css", :rel=>"stylesheet"}
+    %script{:src=>"//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"}
+    %link{ href: "//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel: "stylesheet"}
     :css
+      body { padding-top: 70px; }
+      .row { padding-top: 70px; }
       #nav { margin-top: 25px; }
       @media (max-width: 768px) {
         .affix {
@@ -16,34 +17,125 @@
       }
 
   %body
-    .container
-      .row
-        .col-sm-3
-          .panel.panel-default.affix#nav
-            .panel-heading
-              %h3.panel-title
-                Nav
-            .panel-body
-              %ul.list-unstyled
-                %li
-                  %a{ href: "/rails/mailers"}Mailer Previews
-                %li
-                  %a{ href: "#env" }Environment Variables
+    %nav.navbar.navbar-default.navbar-fixed-top
+      .container-fluid
+        .navbar-header
+          %button.navbar-toggle.collapsed{ type: "button", data: { toggle: "collapse" }, "aria-expanded": false }
+            %span.sr-only Toggle Navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.navbar-brand{ href: "#" } Seed Admin
+        .collapse.navbar-collapse
+          %ul.nav.navbar-nav
+            %li
+              %a{ href: "#packages"} Packages
+            %li
+              %a{ href: "#generators" } Generators
+            %li
+              %a{ href: "#gems" } Gems
+            %li
+              %a{ href: "/rails/mailers"}Mailer Previews
+            %li.dropdown
+              %a.dropdown-toggle{ href: "#", data: { toggle: "dropdown"}}
+                Documentation
+                %span.caret
+              %ul.dropdown-menu
                 - @docs.each do |f|
                   %li
                     %a{ href: "##{f[:name]}"}= f[:name]
-        .col-sm-9
-          / Environment Variables
+
+    - if !flash.empty?
+      .container#flash
+        - flash.each do |key, value|
+          %p= value
+
+    .container
+      .row#packages
+        .jumbotron
+          %h1 Here are some built in awesomeness
+
+          %p It's so great, totally fer sure.
+
+      .row
+        - @packages.each do |package|
+          .col-sm-3
+            .panel.panel-default
+              .panel-heading
+                %h3.panel-title
+                  = package[:title]
+              .panel-body
+                %p= package[:desc]
+
+                %ul
+                  - package[:gens].each do |gen|
+                    %li= gen
+
+                %button.btn.btn-primary Generate!
+
+      .row#generators
+        .col-xs-12
+          %h2 Available seed generators
+
+          %table.table.table-striped.table-bordered
+            %tr
+              %th Genenerator
+              %td Already run?
+              %th Action
+            - @generators.each do |gen|
+              %tr
+                %th= gen.to_s
+                %td= gen.fingerprint
+                %td
+                  - unless gen.fingerprint
+                    = button_to "Run generator", setup_generate_path( gen.to_s ), class: "btn btn-primary"
+
+      .row#gems
+        .col-xs-12
+          %h2 Installed Gems
+
+          %table.table.table-striped.table-bordered
+            %tr
+              %th Gem
+              %th Summary
+              %th Dependancies
+
+            - @specs.each do |spec|
+              %tr
+                %td
+                  = link_to "#{spec.name} #{spec.version}", spec.homepage
+                  %br
+                  %img{ src: "https://badge.fury.io/rb/#{spec.name}.svg" }
+
+                %td= link_to spec.summary, setup_open_path( :gem => spec.name ), "data-title": spec.description, "data-toggle": "tooltip", "data-placement": "bottom"
+                %td
+                  -if spec.dependencies.size > 0
+
+                    .dropdown
+                      %button.btn.btn-default.dropdown-toggle{ type: "button", "data-toggle": "dropdown", "aria-expanded": "true" }
+                        Dependencies
+                        %span.caret
+
+                      %ul.dropdown-menu.dropdown-menu-right
+                        - spec.dependencies.each do |dep|
+                          - spec = Bundler.definition.specs[dep.name].first
+
+                          %li{ class: "#{spec.nil? ? 'disabled' : ''}" }
+                            - if spec
+                              = link_to "#{dep.name} (#{dep.type}) #{dep.requirements_list.join( ", ")}", spec.homepage, "data-title": spec.description, "data-toggle": "tooltip", "data-placement": " auto"
+                            - else
+                              = link_to dep.name, "#"
+
+
+        / rdocs
+      - @docs.each do |f|
+        .row
           %h3
-            %a{ name: "env" }Environment Variables
+            %a{ name: "#{f[:name]}"}= f[:name]
 
-          %pre= @env
+          ~ f[:html].html_safe
 
-          / rdocs
-          - @docs.each do |f|
-            %h3
-              %a{ name: "#{f[:name]}"}= f[:name]
-
-            ~ f[:html].html_safe
-
-            %hr
+:javascript
+  $( function() {
+    $('[data-toggle="tooltip"]').tooltip();  
+  });
